...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_capture_image_select_disease"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_capture_image_select_disease" />

    <Spinner
        android:id="@+id/spinner_diseases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:entries="@array/diseases"
        android:spinnerMode="dropdown"
        android:theme="@style/AppTheme.SpinnerTheme"
...
