<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newHealthFacility.NewHealthFacilityActivity">

    <TextView
        android:id="@+id/text_health_facility_name_hint"
        style="@style/TextHint"
        android:labelFor="@id/text_health_facility_name_field"
        android:text="@string/text_health_facility_name_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/text_health_facility_name_hint" />

    <EditText
        android:id="@+id/text_health_facility_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/text_health_facility_name_hint"
        app:layout_constraintEnd_toEndOf="@+id/button_save_new_health_facility"
        app:layout_constraintStart_toStartOf="@+id/button_save_new_health_facility"
        app:layout_constraintTop_toBottomOf="@+id/text_health_facility_name_hint"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_save_new_health_facility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_save_new_health_facility"
        app:layout_constraintBottom_toTopOf="@+id/button_cancel_new_health_facility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_cancel_new_health_facility"
        style="@style/AppTheme.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_save_new_health_facility"
        app:layout_constraintStart_toStartOf="@+id/button_save_new_health_facility" />
</androidx.constraintlayout.widget.ConstraintLayout>
